test/libsolidity/syntaxTests/pragma/experimental_multiple_same_line.sol
pragma experimental unsupportedName unsupportedName;
// ----
// SyntaxError 6022: (0-52): Stray arguments.
